--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                 <input type="button" value="+" class="orange" onclick="display.value +='+' ">
             </div>
             <div class="row-5">
-                <input type="button" class="ash1" value="00">
-                <input type="button" class="ash1" value="0">
+                <input type="button" class="ash1" value="00" onclick="display.value +='00' ">
+                <input type="button" class="ash1" value="0" onclick="display.value +='0' ">
                 <input type="button"  value="=" class="equal" onclick="display.value= eval(display.value)">
                 
             </div>
